2017-07-07  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py, typhon/datasets/dataset.py,
	typhon/datasets/tovs.py, typhon/plots/common.py,
	typhon/utils/__init__.py, typhon/utils/metaclass.py:

	At all places where we derive code from Stack Overflow, point out
	that either this has to be CC-BY-SA 3.0 licensed, or that we believe
	it does not count as a derivative work.  I am not convinced the former
	is enough, but it's better than nothing.  See e-mail to typhon mailing
	list 2017-07-07 titled “A warning on using code snippets from Stack
	Overflow”.

2017-07-07  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Refactor temperature-related fields and add a translation table
	between short and long names

	* typhon/datasets/tovs.py:

	- Fix small bug in error message

2017-06-30  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset.read):

	- Do not impose dependencies of my_pseudo_fields when those fields
	were not asked for in the reader

	* typhon/datasets/tovs.py:
	
	(HIRS._read):

	- Comment out catch_warnings as long as bug at
	http://bugs.python.org/issue29672 remains.  Be aware that the
	resulting warning is spurious, such as confirmed at
	https://github.com/numpy/numpy/issues/8383

	(HIRS.as_xarray_dataset):

	- Only assign lon/lat coordinates if lon/lat actually present in
	fields.

2017-06-28  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:

	- Don't log on root level, as if this happens before
	logging.basicConfig was set, this will become ineffective!

2017-06-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* README.md: Updated installation recommendations.

	The installation guide for developers now includes a hint to
	install the package in the home directory not system wide.

	* typhon/plots/common.py (label_axes): Minor change in example.

2017-06-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/common.py (label_axes):
