@@ -1,3 +1,13 @@
+2017-07-17  Lukas Kluft  <lukas.kluft@gmail.com>
+
+	* typhon/plots/common.py (supcolorbar):
+
+	Function to add a common colorbar for all subplots in a figure.
+
+	* doc/typhon.plots.rst:
+
+	Added `supcolorbar` to list of functions.
+
 2017-07-07  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/_tovs_defs.py, typhon/datasets/dataset.py,
